Ajout du code JavaFX pour l'affichage 2D